# isoMMO

./: .gitignore  backlands_ai_skill.md  serve.js
.claude/: settings.local.json
backlands-client/: index.html  style.css
backlands-client/src/: main.js  placeholder-data.js  state.js
backlands-client/src/assets/: backlands.spr
backlands-client/src/game/: assets.js  character.js  effects.js  map.js  otherplayers.js  renderer.js
backlands-client/src/network/: opcodes.js  packet.js  socket.js
backlands-client/src/ui/: char-select.js  login.js
backlands-server/: .env.example  Cargo.toml  schema.sql  seed.sql
backlands-server/src/: main.rs
backlands-server/src/db/: mod.rs
backlands-server/src/game/: map.rs  mod.rs  state.rs  world.rs
backlands-server/src/network/: mod.rs  opcodes.rs  protocol.rs
backlands-server/src/utils/: byte_buffer.rs
docs/planning/: next_steps.md  opcode_map.md
tools/asset_compiler/: Cargo.toml
tools/asset_compiler/src/: main.rs
