[package]
name    = "backlands-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
tungstenite  = "0.24"
sqlx         = { version = "0.8", features = ["runtime-tokio", "mysql", "macros"] }
argon2       = "0.5"
futures-util = "0.3"
dotenvy      = "0.15"
